--- a/hNext/hNext.WebClient/Sass/partials/_colors.scss
+++ b/hNext/hNext.WebClient/Sass/partials/_colors.scss
@@ -1,8 +1,11 @@
 ﻿$base-back-color: steelblue;
 $neutral-background-color:white;
 $header-text-color:white;
-$active-tab:lightblue;
-$active-tab-text:darkblue;
+$active-tab:white;
+$active-tab-text:black;
+$inactive-tab:lightblue;
+$inactive-tab-text:darkblue;
+$active-tab-hover-shadow: paleturquoise;
 $footer-text-color:white;
 $selected-grid-row-color: #85C1E9;
 $error-text-color:#f00;
