--- a/hNext/hNext.WebClient/Views/Shared/Components/ConfirmationDialog/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/ConfirmationDialog/Default.cshtml
@@ -7,7 +7,7 @@
                 <i class="fa fa-times"></i>
             </button>
         </div>
-        <div class="show-panel flex-column">
+        <div class="show-panel modal-window-show-panel flex-column">
             <div class="px-1 pt-2 pb-5">
                 <slot></slot>
             </div>
