--- a/hNext/hNext.WebClient/Views/Shared/Components/PersonEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PersonEditor/Default.cshtml
@@ -30,7 +30,7 @@
                 <i class="fas fa-times"></i>
             </button>
         </div>
-        <div class="show-panel flex-column">
+        <div class="show-panel modal-window-show-panel flex-column">
             <div class="d-flex flex-column">
                 <div class="d-flex flex-column flex-md-row align-items-md-stretch">
                     <table class="table table-borderless table-sm">
