--- a/hNext/hNext.WebClient/Views/Shared/Components/DocumentEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/DocumentEditor/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@inject Microsoft.Extensions.Localization.IStringLocalizer<Resources> Localizer
-@model DocumentEditorModel
+@model DocumentEditorViewModel
 
     <template id="document-editor-template">
         <form class="modal-window" :style="{zIndex: level*1000}">
