--- a/hNext/hNext.WebClient/Views/Shared/Components/PatientAdditionalData/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PatientAdditionalData/Default.cshtml
@@ -4,5 +4,6 @@
         <phones-list class="mx-2" :initial-phones="phones" level="0" :person-id="personId" :initial-enabled="enabled" @@enable="enabled = $event"></phones-list>
         <emails-list class="m-2" :initial-emails="emails" level="0" :person-id="personId" :initial-enabled="enabled" @@enable="enabled = $event"></emails-list>
         <documents-list class="m-2" :initial-documents="documents" level="0" :person-id="personId" :initial-enabled="enabled" @@enable="enabled = $event"></documents-list>
+        <guardians-list class="m-2" :initial-guardians="guardians" level="0" :person-id="personId" :initial-enabled="enabled" @@enable="enabled = $event"></guardians-list>
     </div>
 </template>
