--- a/hNext/hNext.WebClient/Views/Shared/Components/PhonesList/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PhonesList/Default.cshtml
@@ -11,15 +11,15 @@
         <div class="d-flex flex-row justify-content-end">
             <div class="additional-data-table mr-1">
                 <table class="flex-grow-1 table-borderless table-sm w-100">
-                    <tr v-for="p in phones" @@click="selectPhone(p)" :class="{'selected-table-row': p.phoneId == selectedPhone.phoneId && p.personId == selectedPhone.personId}">
+                    <tr v-for="p in phones" @@click="selectPhone(p)" :class="{'selected-table-row': p.phoneId == selectedPhone.phoneId}">
                         <td>{{ p.phone.number }}</td>
                     </tr>
                 </table>
             </div>
             <div class="d-flex flex-column">
-                <button class="btn btn-primary" :disabled="!enabled" @@click="add"><i class="fas fa-plus"></i></button>
-                <button class="btn btn-primary mt-1" :disabled="!enabled" @@click="edit"><i class="fas fa-pen"></i></button>
-                <button class="btn btn-danger mt-1" :disabled="!enabled" @@click="remove"><i class="fas fa-minus"></i></button>
+                <button class="btn btn-primary" :disabled="!enabled" @@click.stop.prevent="add"><i class="fas fa-plus"></i></button>
+                <button class="btn btn-primary mt-1" :disabled="!enabled" @@click.stop.prevent="edit"><i class="fas fa-pen"></i></button>
+                <button class="btn btn-danger mt-1" :disabled="!enabled" @@click.stop.prevent="remove"><i class="fas fa-minus"></i></button>
             </div>
         </div>
     </div>
