--- a/hNext/hNext.WebClient/Views/Shared/Components/Doctor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/Doctor/Default.cshtml
@@ -102,12 +102,14 @@
                         </div>
                     </div>
                     <specialties-list level="0" @@enable="enabled = $event" :initial-enabled="enabled" :edit-button="true"
-                                      :initial-specialties="selectedDoctor.specialties" :object-selected="selectedDoctor.id">
+                                      :initial-specialties="selectedDoctor.doctorSpecialties" :object-selected="selectedDoctor.id">
                         <template v-slot="list">
                             <doctor-specialty-editor :level="list.level+1" :initial-enabled="list.enabled" :initial-specialty="list.specialty"
                                                      @@cancel="list.cancel" @@save="list.save($event)"></doctor-specialty-editor>
                         </template>
                     </specialties-list>
+                    <doctor-position-list level="0" class="mt-2" @@enable="enabled = $event" :initial-enabled="enabled"
+                                          :initial-positions="selectedDoctor.doctorPositions" :object-selected="selectedDoctor.id"></doctor-position-list>
                 </div>
             </div>
         </div>
