--- a/hNext/hNext.WebClient/Views/Shared/Components/DoctorSpecialtyEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/DoctorSpecialtyEditor/Default.cshtml
@@ -55,11 +55,11 @@
                 <div class="form-group row mx-0">
                     <label class="col-lg-2 col-form-label text-left text-lg-right" asp-for="DoctorSpecialty.IssuedDate"></label>
                     <div class="col-lg-3">
-                        <input class="form-control" asp-for="DoctorSpecialty.IssuedDate" v-model="specialty.issuedDate"/>
+                        <input class="form-control" asp-for="DoctorSpecialty.IssuedDate" v-model="issuedDate"/>
                     </div>
                     <label class="col-lg-4 col-form-label text-left text-lg-right" asp-for="DoctorSpecialty.Expires"></label>
                     <div class="col-lg-3">
-                        <input class="form-control" asp-for="DoctorSpecialty.Expires" v-model="specialty.expires"/>
+                        <input class="form-control" asp-for="DoctorSpecialty.Expires" v-model="expires"/>
                     </div>
                 </div>
             </div>
