--- a/hNext/hNext.WebClient/Views/Shared/Components/DoctorPositionEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/DoctorPositionEditor/Default.cshtml
@@ -13,7 +13,7 @@
                 <i class="fa fa-times"></i>
             </button>
         </div>
-        <div class="flex-column show-panel modal-window-show-panel">
+        <div class="d-flex flex-column show-panel modal-window-show-panel">
             <div class="d-flex flex-column">
                 <div class="form-group row mx-0 align-items-lg-end">
                     <label class="col-lg-4 col-form-label text-left text-lg-right" asp-for="Position.SpecialtyId"></label>
