--- a/hNext/hNext.WebClient/Views/Shared/Components/DoctorSpecialtyEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/DoctorSpecialtyEditor/Default.cshtml
@@ -37,7 +37,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="row my-2">
+                <div class="row my-2 mx-0">
                     <span class="col-lg-2 text-left text-lg-right font-weight-bold">@Localizer[nameof(Resources.Certificate)]</span>
                 </div>
                 <div class="form-group row mx-0">
