--- a/hNext/hNext.WebClient/Views/Shared/Components/Doctor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/Doctor/Default.cshtml
@@ -54,7 +54,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="col-lg-6 d-flex flex-column mt-3 mb-2 mt-lg-0" style="overflow-y:auto; max-height:80vh;">
+                <div class="col-lg-6 d-flex flex-column mt-3 mb-2 mt-lg-0">
                     <div class="row">
                         <div class="col-2 d-flex flex-column align-items-end justify-content-center">
                             @Localizer[nameof(Resources.FullName)]
@@ -101,7 +101,7 @@
                             <hr class="w-100" />
                         </div>
                     </div>
-                    <div style="z-index:0;">
+                    <div style="z-index:0; overflow-y:auto; max-height:70vh;">
                         <specialties-list level="+0" @@enable="enabled = $event" :initial-enabled="enabled" :edit-button="true"
                                           :initial-specialties="selectedDoctor.doctorSpecialties" :object-selected="selectedDoctor.id">
                             <template v-slot="list">
