--- a/hNext/hNext.WebClient/Views/Home/Index.cshtml
+++ b/hNext/hNext.WebClient/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@inject Microsoft.Extensions.Localization.IStringLocalizer<Resources> Localizer
-@model ApplicationViewModel
+﻿@model ApplicationViewModel
 
 @{
     ViewData["Title"] = $"hNext — {Localizer[nameof(Resources.MedicalInformationSystem)]}";
